# xox

./: .gitignore  BUGS.md  CLAUDE.md  DEPLOYMENT.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.agent/workflows/: parse-pattern-page.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: testing-plan.md  unified-track-config-overview.md
docs/plans/: 2026-03-02-pdf-pattern-extraction-design.md  2026-03-02-pdf-pattern-extraction-handoff.md  2026-03-02-pdf-pattern-extraction-impl.md  2026-03-19-64-steps-plan.md  2026-03-19-pattern-categories-plan.md
docs/specs/: 2026-03-18-pattern-categories-design.md  2026-03-19-64-steps-design.md  2026-03-19-shift-drag-pattern-cycling-design.md  2026-03-20-parameter-locks-design.md  2026-03-20-pattern-modes-design.md  2026-03-21-midi-out-design.md  2026-03-26-better-patterns-design.md  2026-03-28-unified-track-config-design.md  2026-04-03-inline-pattern-drawer-design.md  chooser-style-spec.md
eslint-rules/: no-conditional-border.mjs
plans/: 2026-03-15T14-35-xox-test-plan.md  2026-03-19T12-38-shift-drag-pattern-cycling.md  2026-03-20T12-48-parameter-locks-gain.md  2026-03-21T00-00-midi-out.md  2026-03-27T06-59-better-patterns.md  2026-03-28T16-25-unified-track-config.md
public/patterns/: staging.json
scripts/: cv-parsing-plan.md  cv-parsing-spec.md  generate-favicon.sh  generate_silence.py  handoff.md  parse_pdf_cv.py  parse_pdf_patterns.py
scripts/kit_builder/: README.md  __main__.py  assembler.py  browser.py  build_kit.py  (+4 more)
src/: README.md
(+135 files in other folders)
